--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.4",
+    "portifolio": "file:",
     "sequelize": "^6.37.3"
   }
 }
